Hartstone, weiter studer

--- a/krimis/weitere.html
+++ b/krimis/weitere.html
@@ -27,7 +27,7 @@
 						<a class="active" href="/index.html">⌾ Startseite</a>
 					</div>
 			</nav>		
-      <h2 id="tj-newman">T.J. Newman</h2>
+      <h2 id="t-j-newman">T. J. Newman</h2>
 
 <p>T. J. Newman ist eine amerikanische Autorin.</p>
 
@@ -35,6 +35,16 @@
 
 <ul>
   <li>2021: <em>Falling</em></li>
+</ul>
+
+<h2 id="joey-hartstone">Joey Hartstone</h2>
+
+<p>Joey Hartstone ist ein amerikanischer Autor: <a href="https://www.joeyhartstone.com" target="_blank">Homepage</a>.</p>
+
+<h4 id="roman-1">Roman</h4>
+
+<ul>
+  <li>2022: <em>The Local</em></li>
 </ul>
 
 <!-- previous and next page -->
