--- a/studer/studerA.html
+++ b/studer/studerA.html
@@ -31,8 +31,8 @@
 
 <ul>
   <li><a href="https://fr.wikipedia.org/wiki/Abdelkader_Hadj_Ali" target="_blank"><strong>Abdelkader, Hadj Ali</strong></a> (1883–1957) 250, 252 <br /> 
-  Algerisch-französischer Kommunist, der in der von <a href="studerN#nguyen">→ Hô Chi Minh</a>
-gegründeten Union Intercoloniale tätig war.</li>
+  Algerisch-französischer Kommunist; war in der von <a href="studerN#nguyen">→Hô Chi Minh</a> 
+  gegründeten Union Intercoloniale tätig (250, 252).</li>
   <li><span id="abramow"></span><a href="https://de.wikipedia.org/wiki/Alexander_Lasarewitsch_Abramow-Mirow" target="_blank"><strong>Abramow, Alexandr</strong></a> (1895–1937), »Mirov« 96, 153, 154, 359 <br />
   Russischer Kommunist; »Reisemarschall« der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (96) – 
   inoffiziell Chef des Berliner Stützpunkts der
