--- a/studer/studerB.html
+++ b/studer/studerB.html
@@ -53,7 +53,7 @@ Karriere in der Sowjetunion (191); siehe auch
   Stalins in der PCF (167).</li>
   <li><span id="barbusse"></span><a href="https://de.wikipedia.org/wiki/Henri_Barbusse" target="_blank"><strong>Barbusse, Henri</strong></a> 
   (1873–1935) 208, 252, 266, 267, 275, 367, 395, 399, 400, 407, 464 <br />
-  Französischer Schriftsteller, Präsident des <em>Comité Pro-Hindou</em> (208) –
+  Französischer Schriftsteller, Präsident des <em>Comité Pro-Hindou</em> (208, 252) –
   Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, Präsident des von
   <a href="studerM#münzenberg">→Münzenberg</a> organisierten internationalen
   Verteidigungskomitees für die in China verhafteten
@@ -83,7 +83,7 @@ Karriere in der Sowjetunion (191); siehe auch
   Organisator der <em>Internationalen Schriftstellervereinigung zur Verteidigung der Kultur</em>.</li>
   <li><span id="becherl"></span><a href="https://de.wikipedia.org/wiki/Lilly_Becher" target="_blank"><strong>Becher, Lilly</strong></a> 	(1901–1978) 221 <br />
   Lilly Korpus (später Becher) war eine Zeit lang Chefredakteurin der
-  <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a>.</li>
+  <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a> (221).</li>
   <li><a href="https://de.wikipedia.org/wiki/Hans_Beimler_(Politiker)" target="_blank"><strong>Beimler, Hans</strong></a>
   (1895–1936) 471 <br />
   Deutscher Kommunist, organisierte Freiwillige für die spanische Republik.</li>
@@ -144,8 +144,8 @@ Literaturwissenschaft, Ästhetik und Kulturwissenschaften, 57(2011)
 Heft 3.</li>
   <li><a href="https://de.wikipedia.org/wiki/Joseph_Bilé" target="_blank"><strong>Bilé, Joseph Ekwe</strong></a> 
   (1892–1959) »Charles Morris« 235, 292, 293, 294 <br />
-  Kameruner Kommunist, treibende Kraft hinter der „Liga zur Verteidigung
-  der Negerrasse“, siehe
+  Kameruner Kommunist; treibende Kraft hinter der „Liga zur Verteidigung
+  der Negerrasse“ (292ff); siehe auch
   <a href="https://blackcentraleurope.com/quellen/1914-1945-deutsch/die-deutsche-sektion-der-liga-zur-verteidigung-der-negerrasse-1929/" target="_blank">Seiten von Black Central Europe</a>.</li>
   <li><span id="bindel"></span><strong>Bindel, Charlotte</strong> (1909–2008) »Jana Wagnerowa« 416, 475, 476	<br />
   Österreichische Kommunistin, die in Paris die Freiwilligen für Spanien betreute, siehe
@@ -298,7 +298,8 @@ Heft 3.</li>
   227, 228, 232, 270, 271, 282, 349, 364, 392, 425–427, 432, 433,
   435–437, 440, 441, 443, 449, 450, 451, 530, 543, 549 <br />
   Deutsche Kommunistin, später Publizistin; Mitarbeiterin der
-  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (183ff) – Foto (183) – Partnerin von <a href="studerN#neumann">→Heinz Neumann</a> (191, 194) – Teilnehmerin am m4bruesselerk, auch im Auftrag
+  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (183ff) – Foto (183) – Partnerin von <a href="studerN#neumann">→Heinz Neumann</a> (191, 194) – 
+  Teilnehmerin am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, auch im Auftrag
   der
   <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank">OMS</a> tätig, in Spanien für die Intwernationalen Brigaden tätig, 1933
   Emigration zusammen mit <a href="studerN#neumann">→Heinz Neumann</a> in
