--- a/studer/studerD.html
+++ b/studer/studerD.html
@@ -118,10 +118,14 @@
   (1888–1943) 473 <br />
   Französischer Kommunist, Mitgründer der
   <a href="https://de.wikipedia.org/wiki/Internationale_Brigaden" target="_blank">Internationalen Brigaden</a>.</li>
+  <li><a href="https://de.wikipedia.org/wiki/Hermann_Duncker" target="_blank"><strong>Duncker, Hermann</strong></a>
+  (1874–1960) 235 <br />
+  Deutscher Kommunist;  Dozent an der
+<a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a> (235).</li>
   <li><a href="https://de.wikipedia.org/wiki/Käte_Duncker" target="_blank"><strong>Duncker, Käte</strong></a>
   (1871–1953) 234 <br />
-  Deutsche Bildungspolitikerin, die auch an der
-  <a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a> unterrichtete.</li>
+  Deutsche Bildungspolitikerin; Dozentin an der
+  <a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a> (234).</li>
   <li><span id="duti"></span><strong>Duti, Hilda</strong> 451 <br />
   Deutsche Kommunistin, mit vielen anderen 1937 in Moskau verhaftet, siehe auch den
   <a href="https://rusdeutsch.eu/Nachrichten/3447" target="_blank">Artikel</a> in
@@ -130,17 +134,19 @@
   die gemeinsam mit Hilda Duti im sowjetischen Gefängnis saß.</li>
   <li><span id="duttc"></span><strong>Dutt, Clemens Palme</strong>	(1893–1975) 248, 249, 400 <br />
   Als Indienexperte indisch-schwedischer Abstammung der
-  <a href="https://de.wikipedia.org/wiki/Communist_Party_of_Great_Britain" target="_blank">britischen KP</a> Mitglied im Kolonialbüro der Komintern, Mitglied des
-  Weltkomitees gegen Krieg und Faschismus.</li>
+  <a href="https://de.wikipedia.org/wiki/Communist_Party_of_Great_Britain" target="_blank">britischen KP</a> Mitglied im Kolonialbüro der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (248f) – Mitglied des
+  Weltkomitees gegen Krieg und Faschismus (400).</li>
   <li><a href="https://de.wikipedia.org/wiki/Rajani_Palme_Dutt" target="_blank"><strong>Dutt, Rajani Palme</strong></a>
   (1896–1974) 248, 249, 253 <br />
   Wie sein Bruder <a href="studerD#duttc">→Clemens Palme Dutt</a> Mitglied
-  im Kolonialbüro der Komnintern, zusammen mit seiner Frau <a href="studerD#dutts">→Salme Dutt</a> dort im Konflikt mit m4slink(<code class="language-plaintext highlighter-rouge">R', </code>roy’, `Roy’)
+  im Kolonialbüro der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (248) –  zusammen mit seiner Frau 
+  <a href="studerD#dutts">→Salme Dutt</a> dort im Konflikt mit 
+  <a href="studerR#roy">→Roy</a>
   über die Frage der Zusammenarbeit mit dem
-  <a href="https://de.wikipedia.org/wiki/Indischer_Nationalkongress" target="_blank">Indian National Congress</a>.</li>
+  <a href="https://de.wikipedia.org/wiki/Indischer_Nationalkongress" target="_blank">Indian National Congress</a> (249).</li>
   <li><span id="dutts"></span><a href="https://en.wikipedia.org/wiki/Salme_Pekkala-Dutt" target="_blank"><strong>Dutt, Salme</strong></a> (geb. Murrik) 248 <br />
-  Estonisch-britische Kommunistin mit ihrem Mann und dessen Bruder tätig
-  im Kolonialbüro der Komintern.</li>
+  Estonisch-britische Kommunistin; mit ihrem Mann und dessen Bruder tätig
+  im Kolonialbüro der Komintern (248).</li>
 </ul>
 
 <!-- previous and next page -->
