--- a/studer/studerE.html
+++ b/studer/studerE.html
@@ -48,11 +48,11 @@
   <li><a href="https://de.wikipedia.org/wiki/Albert_Einstein" target="_blank"><strong>Einstein, Albert</strong></a>
   (1879–1955) 234, 266, 275, 367 <br />
   Einstein unterrrichtete an der
-  <a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule</a> (MASCH); sandte ein
-  Glückwunschschreiben an den »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927
-  und Mitglied des Ehrenpräsidiums der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a>; untersützte <a href="studerM#münzenberg">→Münzenbergs</a> Kampagne zur Freilassung der in China verhafteten
+  <a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule</a> (MASCH) (234) –  sandte ein
+  Glückwunschschreiben an den »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (266) -
+  war Mitglied des Ehrenpräsidiums der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (275) –  untersützte <a href="studerM#münzenberg">→Münzenbergs</a> Kampagne zur Freilassung der in China verhafteten
   »Noulens« (tatsächlich <a href="studerR#rudnik">→Jakov Rudnik</a> und
-  seine Frau <a href="studerM#moissenko">→Tat’jana Moissenko</a>).</li>
+  seine Frau <a href="studerM#moissenko">→Tat’jana Moissenko</a>) (367).</li>
   <li><strong>Eisler, Elfriede</strong> <a href="studerF#fischerr">→Fischer, Ruth</a></li>
   <li><span id="esilerg"></span><a href="https://de.wikipedia.org/wiki/Gerhart_Eisler" target="_blank"><strong>Eisler, Gerhart</strong></a> (1897–1968) »Robert« 201, 261, 341, 343, 346 <br />
   Österreichisch-deutscher Kommunist; Redakteur der 
