--- a/studer/studerG.html
+++ b/studer/studerG.html
@@ -150,7 +150,7 @@
   420, 438, 454, 539, 549 <br />
   Deutsche Kommunistin, später Publizistin; Lebensgefährtin von <a href="studerM#münzenberg">→Willi Münzenberg</a> (139) – 
   Schwester von <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a> (214) –
-  Geschäftsführerin des Neuen Deutschen Verlags. 1933 Flucht nach Paris,
+  Geschäftsführerin des Neuen Deutschen Verlags (222) – Foto (227) – 1933 Flucht nach Paris,
   Verlagsleitung der
   <a href="https://de.wikipedia.org/wiki/Editions_du_Carrefour" target="_blank">Éditions du Carrefour</a>. Gross trat 1937 aus der KPD aus. Ihr gelang
   die Flucht nach Mexiko. Von 1949 bis 1951 war sie die
