--- a/studer/studerH.html
+++ b/studer/studerH.html
@@ -44,12 +44,12 @@
   (1902–1980)	 267 <br />
   Indonesischer Politiker, Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
   <li><a href="https://de.wikipedia.org/wiki/John_Heartfield" target="_blank"><strong>Heartfield, John</strong></a>
-  (1891–1968) 221, 367 <br />
-  Deutscher Fotokünstler, steuerte Fotomontagen für die
-  <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a> bei; beteiligt an <a href="studerM#münzenberg">→Münzenbergs</a>
+  (1891–1968) 221, 234, 367 <br />
+  Deutscher Fotokünstler; steuerte Fotomontagen für die
+  <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a> bei (221) – machte das Bühnenbild zu Brechts Lehrstück <a href="https://de.wikipedia.org/wiki/Die_Maßnahme_(Drama)" target="_blank"><em>Die Maßnahme</em></a> (234) – beteiligt an <a href="studerM#münzenberg">→Münzenbergs</a>
   Kampagne zur Befreiung von <a href="studerR#rudnik">→Jakov Rudnik</a> und
   <a href="studerM#moiseenko">→Tat’jana Moiseenko-Velikaja</a>, die in China
-  verhaftet worden waren.</li>
+  verhaftet worden waren (367).</li>
   <li><a href="https://de.wikipedia.org/wiki/Fritz_Heckert" target="_blank"><strong>Heckert, Fritz</strong></a>
   (1884–1936) 168 <br />
   Deutscher Kommunist;
@@ -102,7 +102,7 @@
   Hirschfelds Institut für Sexualwissenschaft wurde 1933 von
   faschistischen Studenten zerstört (393).</li>
   <li><strong>Hitz, Christian</strong> (1883–1954) 246 <br />
-  Schweizer kommunistischer Rechtsanwalt, befreundet mit <a href="studerR#roy">→Roy</a>, siehe auch
+  Schweizer kommunistischer Rechtsanwalt; befreundet mit <a href="studerR#roy">→Roy</a> (246); siehe auch
   <a href="https://hls-dhs-dss.ch/de/articles/006377/2006-05-11/" target="_blank">Kurzbiographie</a> in <em>Historisches Lexikon der Schweiz</em>.</li>
   <li><strong>Hô Chi Minh</strong>	<a href="studerN#nguyen">→Nguyễn Ái Quốc</a></li>
   <li><a href="https://de.wikipedia.org/wiki/Max_Hodann" target="_blank"><strong>Hodann, Max</strong></a>
@@ -110,12 +110,12 @@
   Deutscher Arzt und Sexualpädagoge; stand in Kontakt zu <a href="studerB#brupbacher">→Brupbacher</a> und seiner Frau (215).</li>
   <li><a href="https://de.wikipedia.org/wiki/Edwin_Hoernle" target="_blank"><strong>Hoernle, Edwin</strong></a>
   (1883–1952) 234 <br />
-  Deutscher Kommunist, unterrrichtete an der
-  <a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a>.</li>
+  Deutscher Kommunist;  Dozent an der
+<a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a> (234).</li>
   <li><span id="hofmaier"></span><strong>Hofmaier, Karl</strong> (1897–1988) 230, 411, 439, 478, 479, 509 <br />
-  Schweizer Kommunist, als Beauftragter der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> für die
+  Schweizer Kommunist; als Beauftragter der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> für die
   Auflösung der
-  <a href="https://de.wikipedia.org/wiki/Internationale_Arbeiterhilfe" target="_blank">Internationalen Arbeiterhilfe</a> zuständig; mitverantwortlich für den
+  <a href="https://de.wikipedia.org/wiki/Internationale_Arbeiterhilfe" target="_blank">Internationalen Arbeiterhilfe</a> zuständig (230) – mitverantwortlich für den
   Schweizer Spanien-Apparat der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; siehe auch
   <a href="https://hls-dhs-dss.ch/de/articles/024671/2007-12-18/" target="_blank">Kurzbiographie</a> in <em>Historisches Lexikon der Schweiz</em>.</li>
   <li><strong>Holm, Hans</strong> (1895–1981) 427 <br />
