--- a/studer/studerIJ.html
+++ b/studer/studerIJ.html
@@ -43,7 +43,7 @@
   der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, weil Isaacs mit Trotzki sympathisierte und den
   Stalinkult ablehnte.</li>
   <li><strong>Itschner, Hans Heinrich</strong> (1887–1962) »Karl Müller« 228, 231, 263, 264 <br />
-  Schweizer Kommunist, Mitarbeiter von <a href="studerM#münzenberg">→Münzenberg</a>, siehe auch
+  Schweizer Kommunist; Mitarbeiter von <a href="studerM#münzenberg">→Münzenberg</a> (228, 231); siehe auch
   <a href="https://hls-dhs-dss.ch/de/articles/023002/2005-09-05/" target="_blank">Kurzbiographie</a> in <em>Historisches Lexikon der Schweiz</em>.</li>
   <li><span id="ivens"></span><a href="https://de.wikipedia.org/wiki/Joris_Ivens" target="_blank"><strong>Ivens, Joris</strong></a>
   (1898–1989) 465 <br />
