--- a/studer/studerK.html
+++ b/studer/studerK.html
@@ -102,8 +102,8 @@
   Kurella</a> 1936 in Moskau als „Trotzkistin“ denunziert.</li>
   <li><a href="https://de.wikipedia.org/wiki/Egon_Erwin_Kisch" target="_blank"><strong>Kisch, Egon, Erwin</strong></a>
   (1885–1948) 234, 367, 377, 500 <br />
-  „Rasender Reporter“, unterrichtete an der
-  <a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a>; beteiligte sich an der
+  „Rasender Reporter“; unterrichtete an der
+  <a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a> (234) –   beteiligte sich an der
   Kampagne zur Freilassung der in China verhafteten
   Komintern-Funktionäre <a href="studerM#moiseenko">→Tatjana
   Moiseenko-Velikaja</a> und <a href="studerR#rudnik">→Jakov Rudnik</a>;
@@ -152,8 +152,8 @@
   <li><span id="komjata"></span><a href="https://en.wikipedia.org/wiki/Aladár_Komját" target="_blank"><strong>Komját, Aladár</strong></a>
   (1891–1937) 185, 186, 190, 196, 197, 215, 232, 425, 430, 431 <br />
   Ungarischer Kommunist; Mitarbeiter im engeren Kern der Redaktion der
-  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (185f); Vertreter des
-  <a href="https://de.wikipedia.org/wiki/Proletkult" target="_blank">Proletkults</a>;
+  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (185f) – Vertreter des
+  <a href="https://de.wikipedia.org/wiki/Proletkult" target="_blank">Proletkults</a> (232);
   siehe auch
   <a href="'https://www.rosalux.de/fileadmin/rls_uploads/pdfs/Utopie_kreativ/102/102_Kebir.pdf'" target="_blank">Kurzbiographie</a> von Sabine Kerr: <em>Aladár Komját (1891-1936) – ein
   unbekanntes Mitglied des BPRS</em> in: UTOPIE kreativ, Heft 102, April
@@ -225,7 +225,7 @@
   Ungarischer Kommunist; Teilnehmer am <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku (111) – 
   in den 1920er Jahren
   als Emissär des EKKI in Deutschland (151) – ab 1924 Leiter der
-  Agitprop-Abteilung der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; 1938 in der Sowjetunion im Rahmen
+  Agitprop-Abteilung der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (222) –  1938 in der Sowjetunion im Rahmen
   der stalinistischen Säuberungen erschossen.</li>
   <li><a href="https://de.wikipedia.org/wiki/Alfred_Kurella" target="_blank"><strong>Kurella, Alfred</strong></a>
   (1895–1975) 161, 162, 219, 221, 395, 400, 408<br />
