--- a/studer/studerL.html
+++ b/studer/studerL.html
@@ -68,7 +68,7 @@
   <a href="studerR#roy">→Roy</a> war Lenin
   zur Zusammenarbeit mit radikalen Nationalisten im Kampf gegen den
   Kolonialismus und Imperialismus bereit (107) –  Lenin betraute <a href="studerM#münzenber">→Münzenberg</a> 1921 mit einer Kampagne zur Organisation
-  internationaler Hilfe gegen die Hungersnot an der Wolga (142).</li>
+  internationaler Hilfe gegen die Hungersnot an der Wolga (142, 224).</li>
   <li><a href="https://de.wikipedia.org/wiki/Mar%C3%ADa_Teresa_León_Goyri" target="_blank"><strong>Léon, Maria Teresa</strong></a> (1903–1988) 500<br />
   Spanische Schriftstellerin, Teilnehmerin am »Zweiten Internationale
   Schriftstellerkongresses zur Verteidigung der Kultur«.</li>
