--- a/studer/studerM.html
+++ b/studer/studerM.html
@@ -165,9 +165,9 @@ in Zentral- und Südchina aufbaute.</li>
   »<a href="https://de.wikipedia.org/wiki/Versöhnler" target="_blank">Versöhnler</a>«.</li>
   <li><a href="https://de.wikipedia.org/wiki/Hannes_Meyer" target="_blank"><strong>Meyer, Hannes</strong></a>
   (1889–1954) 234, 524 <br />
-  Schweizer Architekt; Dozent an der
-  <a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a>; in Mexiko am Abend ihres
-  Todes mit <a href="studerM#modotti">→Tina Modotti</a> zusammen.</li>
+  Schweizer Architekt;  Dozent an der
+<a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a> (234) – 
+  in Mexiko am Abend ihres Todes mit <a href="studerM#modotti">→Tina Modotti</a> zusammen (524).</li>
   <li><span id="meyer-levine"></span><a href="https://de.wikipedia.org/wiki/Rosa_Meyer-Leviné" target="_blank"><strong>Meyer–Leviné, Rosa</strong></a> (geb. Broido) (1890–1979) 38, 343, 380, 389, 390 <br />
   Deutsche Kommunistin; Witwe der russischen Revolutionärs und führenden
   Mitglieds der
@@ -201,19 +201,19 @@ in Zentral- und Südchina aufbaute.</li>
   der Komintern für die <a href="https://de.wikipedia.org/wiki/Partido_Comunista_de_España" target="_blank">PCE</a>; siehe auch
   <a href="https://es.wikipedia.org/wiki/Stoyán_M%C3%ADnev" target="_blank">Kurzbiographie</a> in der spanischen Wikipedia.</li>
   <li><strong>Mirow</strong> <a href="studerA#abramow">→Abramow, Alexandr</a></li>
-  <li><strong>Misiano, Francesco</strong> (1884–1936) 222, 226, 228–230, 539?, 540? <br />
+  <li><strong>Misiano, Francesco</strong> (1884–1936) 222, 226, 228–230 <br />
   Italienischer kommunistischer Filmproduzent; Vertreter im ZK der
-  <a href="https://de.wikipedia.org/wiki/Internationale_Arbeiterhilfe" target="_blank">Internationalen Arbeiterhilfe</a> (IAH), stammte aus Kalabrien, war
+  <a href="https://de.wikipedia.org/wiki/Internationale_Arbeiterhilfe" target="_blank">Internationalen Arbeiterhilfe</a> (IAH) (222) –  war
   Sekretär der Eisenbahnergewerkschaft in Turin, wegen dieser Tätigkeit
-  verhaftet, floh 1916 nach Zürich; 1919 beim Sprtakusaufstand in Berlin
-  verhaftet; ging nach der Entlassung zurück nach Italien und war
-  Gründungsmitglied der <a href="https://de.wikipedia.org/wiki/Partito_Comunista_Italiano" target="_blank">KPI</a>; baute 1924 in der Sowjetunion in
+  verhaftet (228) –  floh 1916 nach Zürich (228) –  1919 beim Sprtakusaufstand in Berlin
+  verhaftet (228) – ging nach der Entlassung zurück nach Italien und war
+  Gründungsmitglied der <a href="https://de.wikipedia.org/wiki/Partito_Comunista_Italiano" target="_blank">KPI</a> (229) –  baute 1924 in der Sowjetunion in
   <a href="studerM#münzenberg">→Münzenberg</a>s Auftrag die Filmproduktionsfirma
-  Mežrabpom-Rus’ auf; nach einer politischen Rüge der Internationalen
+  Mežrabpom-Rus’ auf (229) –  nach einer politischen Rüge der Internationalen
   Kontrollkommission der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> wurde Misiano nach der Auflösung
-  der IAH entlassen; obwohl Misiano nach Italien zurück wollte, musste
+  der IAH entlassen (230) –  obwohl Misiano nach Italien zurück wollte, musste
   er in Moskau bleiben, wo er erkrankte und 1936 starb, »Sein früher Tod
-  ersparte ihm höchstwahrscheinlich die Verhaftung«; siehe auch
+  ersparte ihm höchstwahrscheinlich die Verhaftung« (231); siehe auch
   <a href="https://it.wikipedia.org/wiki/Francesco_Misiano" target="_blank">Kurzbiographie</a> in der italienischen Wkikpedia.</li>
   <li><span id="modotti"></span><a href="https://de.wikipedia.org/wiki/Tina_Modotti" target="_blank"><strong><em>Modotti, Tina</em></strong></a>
   (1896–1942) »Kostarikas«, »Julio Anronio«, »Maria Cortes«, »Magda Toledo«, 
@@ -223,9 +223,9 @@ in Zentral- und Südchina aufbaute.</li>
   Italienische Kommunistin; Gefährtin von <a href="studerV#vidali">→Vittorio
   Vidali</a> (30) – 1933 und 1936 in geheimer Mission in Europa unterwegs
   (174) – veröffentlichte ihre Fotografien in der
-  <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a>, schrieb für die
+  <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a> (221) – schrieb für die
   <a href="https://de.wikipedia.org/wiki/Internationale_Rote_Hilfe" target="_blank">Internationale Rote Hilfe</a> einen programmatischen Artikel »<em>Photos
-  als Waffe der RH-Agitation</em>«, liiert mit <a href="studerM#mella">→Julio
+  als Waffe der RH-Agitation</em>« (221) -  liiert mit <a href="studerM#mella">→Julio
   Antonio Mella</a>, wurde 1931 Mitglied der russischen KP, als faktische
   Leiterin der IRH für die Unterstützung der spanischen Republikaner
   zuständig, zunächst von Paris aus, dann in Spanien selbst,
@@ -252,7 +252,7 @@ in Zentral- und Südchina aufbaute.</li>
   Schweizer Journalist; »etwas undurchsichtiger Financier der Bolschewiki« (146).</li>
   <li><span id="moser"></span><a href="https://de.wikipedia.org/wiki/Mentona_Moser" target="_blank"><strong>Moser, Mentona</strong></a>	
   (1874–1971) 198, 199, 232, 233, 390, 419, 493, 551 <br />
-  Schweizer Kommunistin; genannt »Die rote Millionärin», Foto (199) –  1929 bis 1933
+  Schweizer Kommunistin; genannt »Die rote Millionärin» (232) –  Foto (199) –  1929 bis 1933
   im illegalen Apparat der
   <a href="https://de.wikipedia.org/wiki/Rote_Hilfe_Deutschlands" target="_blank">Roten
   Hilfe</a> tätig (198) – später wurde ihr Vermögen in Deutschland konfisziert,
@@ -283,12 +283,12 @@ in Zentral- und Südchina aufbaute.</li>
   280-290, 292-297, 361, 366-368, 371, 375, 390-403, 405, 416, 418, 419,
   427, 438, 452-454, 466, 467, 471, 472, 478, 495, 523, 527, 530, 531,
   534, 539, 549, 552 <br /> 
-  Deutscher Kommunist; „Kulturunternehmer“ der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (29) –
+  Deutscher Kommunist; „Kulturunternehmer“ der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (29, 220ff) –
   als Vorsitzender der
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Jugendinternationale" target="_blank">Kommunistischen Jugeninternationale</a> Teilnehmer am II. Weltkongress
   der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (60f, 96) – Kritiker der Vertreter des rechten Flügels der
   <a href="https://de.wikipedia.org/wiki/Unabhängige_Sozialdemokratische_Partei_Deutschlands" target="_blank">USPD</a> am II. Weltkongress (70, 72, 75, 76) – Foto (71, 79) –
-  Gründer der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a>,
+  Gründer der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (239) – 
   organisierte den »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927,
   Flucht vor dem
   Nationalsozialismus nach Paris, dort insbesondere Verleger des
