--- a/studer/studerN.html
+++ b/studer/studerN.html
@@ -64,10 +64,10 @@
   von dort abkommandiert lebte er illegal in der Schweiz, aus der er
   1935 in die Sowjetunion ausgewiesen wurde, dort 1937 zum Tode verteilt und
   erschossen.</li>
-  <li><span id="nguyen"></span><a href="https://de.wikipedia.org/wiki/Hồ_Ch%C3%AD_Minh" target="_blank"><strong>Nguyễn Ái Quốc</strong></a> (1890–1969), »Hô Chi Minh«, »Mr. Lai« 250, 252, 320, 351–353 <br />
+  <li><span id="nguyen"></span><a href="https://de.wikipedia.org/wiki/Hồ_Ch%C3%AD_Minh" target="_blank"><strong>Nguyễn Ái Quốc</strong></a> (1890–1969), »Hô Chi Minh«, »Mr. Lai«  236, 250, 252, 320, 351–353 <br />
   Vietnamesischer Kommunist; als Delegierter Indochinas Teilnehmer des
-  Gründungskongresses der m4kpf, Gründungsmitglied der 1921 gegründeten
-  <em>Union Intercoloniale (UIC)</em>, Mitarbeiter des Stabs von <a href="studerB#borodin">→Borodin</a>, der Informationen aus China für das EKKI
+  Gründungskongresses der <a href="https://de.wikipedia.org/wiki/Parti_communiste_français" target="_blank">PCF</a> (250) –  Gründungsmitglied der 1921 gegründeten
+  <em>Union Intercoloniale (UIC)</em> (250, 252) –  Mitarbeiter des Stabs von <a href="studerB#borodin">→Borodin</a>, der Informationen aus China für das EKKI
   aufbereitete, 1930 von den britischen Behörden in Hongkong verhaftet.</li>
   <li><a href="https://de.wikipedia.org/wiki/Boris_Iwanowitsch_Nikolajewski" target="_blank"><strong>Nicolaevsky, Boris</strong></a> (1887–1966) 138 <br />
   Führender Menschewik; <a href="studerR#reich">→Reich</a> erzählte Nicolaevsky
