--- a/studer/studerPQ.html
+++ b/studer/studerPQ.html
@@ -122,7 +122,7 @@
   (1893–1966) 234, 403 <br />
   Deutscher Regisseur; inszenierte Brechts Lehrstück
   <a href="https://de.wikipedia.org/wiki/Die_Maßnahme_(Drama)" target="_blank"><em>Die
-  Maßnahme</em></a>, drehte den Film
+  Maßnahme</em></a> (234) –  drehte den Film
   <a href="https://de.wikipedia.org/wiki/Der_Aufstand_der_Fischer" target="_blank"><em>Der
   Aufstand der Fischer</em></a> nach der Novelle von <a href="studerS#seghers">→Anna
   Seghers</a>, warf <a href="studerK#katz">→Otto Katz</a> Veruntreuung von
@@ -162,11 +162,11 @@
   <li><a href="https://de.wikipedia.org/wiki/Jakow_Alexandrowitsch_Protasanow" target="_blank"><strong>Protazanov, Jakov</strong></a> (1881-1945) 229 <br />
   Russischer Regisseur; drehte 1924 den Stummfilm
   <a href="https://de.wikipedia.org/wiki/Aelita_(Film)" target="_blank"><em>Aelita – Der
-  Flug zum Mars</em></a>.</li>
+  Flug zum Mars</em></a> (229).</li>
   <li><a href="https://de.wikipedia.org/wiki/Wsewolod_Illarionowitsch_Pudowkin" target="_blank"><strong>Pudovkin, Vsevolod</strong></a> (1893–1953) 229 <br />
   Russischer Regisseur; drehte 1926 den Spielfim
   <a href="https://de.wikipedia.org/wiki/Die_Mutter_(1926)" target="_blank"><em>Die
-  Mutter</em></a>.</li>
+  Mutter</em></a> (229).</li>
   <li><strong>Purman, Leon</strong> (1892–1933), »Andrés« 461 <br />
   Polnischer Kommunist; für die Komintern in Spanien tätig.</li>
 </ul>
