--- a/studer/studerR.html
+++ b/studer/studerR.html
@@ -93,7 +93,7 @@
   ismalische Dschihad als „Farce“ (132).</li>
   <li><a href="https://de.wikipedia.org/wiki/Maria_Reese" target="_blank"><strong>Reese, Maria</strong></a>
   (1889–1958) 233 <br />
-  Deutsche Kommunistin; 1929 demonstrativ von der SPD in die <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> übergetreten.</li>
+  Deutsche Kommunistin; 1929 demonstrativ von der SPD in die <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> übergetreten (233).</li>
   <li><span id="regler"></span><a href="https://de.wikipedia.org/wiki/Gustav_Regler" target="_blank"><strong>Regler, Gustav</strong></a> (1898-1963) 198, 212, 213, 391, 396, 404–406, 455, 465<br />
   Deutscher kommunstischer Schriftsteller; 1929 in die <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a>
   eingetreten, Mitwohner der
@@ -137,7 +137,7 @@
   die USA wo er den Namen »Rubenstein« annahm.</li>
   <li><span id="reichw"></span><a href="https://de.wikipedia.org/wiki/Wilhelm_Reich" target="_blank"><strong>Reich, Wilhelm</strong></a> (1897–1957) 234, 276, 548 <br />
   Austroamerikanischer linker Sexualwissenschaftler;  Dozent an der
-<a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a>.</li>
+<a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a> (234).</li>
   <li><strong>Rein, Mark</strong> 515, 516? <br />
   Deutscher Jungsozialist russischer Herkunft, im April 1937 durch das
   NKVD in Barcelona entführt und ermordet.</li>
@@ -151,7 +151,7 @@
   <li><a href="https://de.wikipedia.org/wiki/Ludwig_Renn" target="_blank"><strong>Renn, Ludwig</strong></a>
   (1889–1979) 234 <br />
   Deutscher Schriftsteller;  Dozent an der
-<a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a>.</li>
+<a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a> (234).</li>
   <li><a href="https://de.wikipedia.org/wiki/Jean_Renoir" target="_blank"><strong>Renoir, Jean</strong></a>
   (1894–1979) 465 <br />
   Französischer Regisseur; wirkte am Film
