--- a/studer/studerS.html
+++ b/studer/studerS.html
@@ -38,7 +38,7 @@
   <li><a href="https://fr.wikipedia.org/wiki/Simon_Sabiani" target="_blank"><strong>Sabiani, Simon</strong></a>
   (1888–1956) 242 <br />
   Französischer Politiker; war kurze Zeit Mitglied der <a href="https://de.wikipedia.org/wiki/Parti_communiste_français" target="_blank">PCF</a>, wurde
-  später zum Faschisten und Kollaborateur.</li>
+  später zum Faschisten und Kollaborateur (242).</li>
   <li><span id="sabo"></span><strong>Saborowski, Elise</strong> (1886–1939) »Sabo« 371, 372, 387, 533 <br />
   <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank">OMS</a>-Mitarbeiterin, Frau von <a href="studerE#ewert">→Arthur Ewert</a>,
   gemeinsam mit ihm in China und Brasilien, dort verhaftet, gefoltert
@@ -59,7 +59,7 @@
   <li><a href="https://de.wikipedia.org/wiki/Antoine_de_Saint-Exupéry" target="_blank"><strong>Saint-Exupéry, Antoine de</strong></a> (1900–1944) 466 <br />
   Französischer Schriftsteller; berichtete auf republikanischer Seite
   aus Spanien.</li>
-  <li><a href="https://en.wikipedia.org/wiki/Shapurji_Saklatvala" target="_blank"><strong>Saklatvala, Shapurji</strong></a> (1874–1936) 205, 292 <br />
+  <li><a href="https://en.wikipedia.org/wiki/Shapurji_Saklatvala" target="_blank"><strong>Saklatvala, Shapurji</strong></a> (1874–1936) 205, 252, 292 <br />
   Britischer Kommunist indischer Herkunft; Redner auf der
   Antiimperialistischen Jugendkonferenz am 30, Mai 1931 in Berlin (292).</li>
   <li><span id="sandino"></span><a href="https://de.wikipedia.org/wiki/Augusto_César_Sandino" target="_blank"><strong>Sandino, Augusto</strong></a> (1895–1934) 255, 276, 278, 367 <br />
@@ -128,7 +128,7 @@ Schriftstellerkongresses zur Verteidigung der Kultur, siehe
   bis 1941 Mitglied des EKKI-Präsidiums (176).</li>
   <li><span id="senghor"></span><a href="https://de.wikipedia.org/wiki/Lamine_Senghor" target="_blank"><strong>Senghor, Lamine</strong></a> (1889–1927) 250, 252, 267, 269–274, 292 <br />
   Sengalesischer Kommunist; machte erste politische Schritte bei der
-  <em>Union Intercoloniale</em>, Redner auf dem »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
+  <em>Union Intercoloniale</em> (250) –  Redner auf dem »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (247ff).</li>
   <li><a href="https://de.wikipedia.org/wiki/Paul_Senn" target="_blank"><strong>Senn, Paul</strong></a>
   (1901–1953) 468 <br />
   Schweizer Fotograf; begleitete 1937 einen Hilfskonvoi des
