--- a/studer/studerT.html
+++ b/studer/studerT.html
@@ -100,7 +100,7 @@
   (1876–1929) 266 <br />
   Schweizer Kommunist; Präsident der Schweizer Sektion der
   <a href="https://de.wikipedia.org/wiki/Internationale_Rote_Hilfe" target="_blank">Internationalen Roten Hilfe</a>, Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (266).</li>
-  <li><span id="togliatti"></span><a href="https://de.wikipedia.org/wiki/Palmiro_Togliatti" target="_blank"><strong>Togliatti, Palmiro</strong></a> (1883–1964) »Alfredo«, »Ercoli« 28, 164, 168
+  <li><span id="togliatti"></span><a href="https://de.wikipedia.org/wiki/Palmiro_Togliatti" target="_blank"><strong>Togliatti, Palmiro</strong></a> (1883–1964) »Alfredo«, »Ercoli« 28, 164, 168, 230
   <br />
   Italienischer Kommunist; Spitzenfunktionär der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (28, 168) –
   arbeitete regelmäßig ab 1927 mit dem WEB in Berlin zusammen (164) –
